@startuml Kiến trúc tổng quan hệ thống
!define RECTANGLE class

title Sơ đồ kiến trúc tổng quan - Hệ thống DAVictory IELTS

skinparam rectangle {
    BackgroundColor<<frontend>> LightBlue
    BackgroundColor<<backend>> LightGreen
    BackgroundColor<<database>> LightYellow
    BackgroundColor<<external>> LightPink
}

actor "Học viên" as Student
actor "Giáo viên" as Teacher
actor "Admin" as Admin
actor "Khách" as Guest

package "Frontend Layer" <<frontend>> {
    rectangle "React Application\n(Port 5173)" as React {
        rectangle "Pages" as Pages
        rectangle "Components" as Components
        rectangle "Services" as Services
        rectangle "Hooks" as Hooks
    }
}

package "Backend Layer" <<backend>> {
    rectangle "Spring Boot Application\n(Port 8080)" as SpringBoot {
        rectangle "Controllers\n(REST API)" as Controllers
        rectangle "Services\n(Business Logic)" as BusinessServices
        rectangle "Repositories\n(Data Access)" as Repositories
        rectangle "Security\n(JWT + Spring Security)" as Security
    }
}

package "Database Layer" <<database>> {
    database "MySQL\n(Port 3306)" as MySQL {
        rectangle "Users & Roles" as UserDB
        rectangle "Tests & Questions" as TestDB
        rectangle "Exam Attempts" as ExamDB
        rectangle "Classes & Assignments" as ClassDB
    }
}

package "External Services" <<external>> {
    cloud "Google Drive API" as GoogleDrive
    cloud "Email Service\n(SMTP)" as Email
}

Student --> React : "Truy cập web"
Teacher --> React : "Truy cập web"
Admin --> React : "Truy cập web"
Guest --> React : "Truy cập web"

React --> Controllers : "HTTP/REST API\n(JSON)"
Controllers --> Security : "Xác thực JWT"
Security --> Controllers : "Token valid"

Controllers --> BusinessServices : "Gọi business logic"
BusinessServices --> Repositories : "Truy vấn dữ liệu"
Repositories --> MySQL : "JDBC/JPA"

BusinessServices --> GoogleDrive : "Upload/Download files"
BusinessServices --> Email : "Gửi thông báo"

note right of React
  **Frontend Tech Stack:**
  - React 19.2.0
  - Vite 8.0
  - Axios (HTTP Client)
  - React Router
end note

note right of SpringBoot
  **Backend Tech Stack:**
  - Spring Boot 4.0.3
  - Spring Security + JWT
  - Spring Data JPA
  - Java 21
end note

note right of MySQL
  **Database:**
  - MySQL 8.0
  - 30+ tables
  - Indexes & Foreign Keys
end note

@enduml

@startuml Kiến trúc chi tiết Backend
title Sơ đồ kiến trúc chi tiết - Backend (Spring Boot)

package "Presentation Layer" {
    [AuthController] as AuthCtrl
    [TestBuilderController] as TestCtrl
    [ExamAttemptController] as ExamCtrl
    [WritingController] as WriteCtrl
    [ClassManagementController] as ClassCtrl
    [AssignmentController] as AssignCtrl
}

package "Security Layer" {
    [JwtAuthenticationFilter] as JwtFilter
    [JwtUtil] as JwtUtil
    [CustomUserDetailsService] as UserDetails
}

package "Service Layer" {
    [UserService] as UserSvc
    [TestBuilderService] as TestSvc
    [ExamAttemptService] as ExamSvc
    [WritingService] as WriteSvc
    [ClassService] as ClassSvc
    [AssignmentService] as AssignSvc
    [GoogleDriveService] as DriveSvc
}

package "Repository Layer" {
    [UserRepository] as UserRepo
    [TestRepository] as TestRepo
    [QuestionRepository] as QuesRepo
    [ExamAttemptRepository] as ExamRepo
    [ClassRepository] as ClassRepo
    [AssignmentRepository] as AssignRepo
}

package "Entity Layer" {
    [User] as UserEntity
    [Test] as TestEntity
    [Question] as QuesEntity
    [ExamAttempt] as ExamEntity
    [Class] as ClassEntity
    [Assignment] as AssignEntity
}

database "MySQL Database" as DB

' Presentation -> Security
AuthCtrl --> JwtFilter
TestCtrl --> JwtFilter
ExamCtrl --> JwtFilter
WriteCtrl --> JwtFilter
ClassCtrl --> JwtFilter
AssignCtrl --> JwtFilter

' Security -> Service
JwtFilter --> JwtUtil
JwtFilter --> UserDetails
UserDetails --> UserSvc

' Controller -> Service
AuthCtrl --> UserSvc
TestCtrl --> TestSvc
ExamCtrl --> ExamSvc
WriteCtrl --> WriteSvc
ClassCtrl --> ClassSvc
AssignCtrl --> AssignSvc

' Service -> Service
TestSvc --> DriveSvc
ExamSvc --> WriteSvc

' Service -> Repository
UserSvc --> UserRepo
TestSvc --> TestRepo
TestSvc --> QuesRepo
ExamSvc --> ExamRepo
WriteSvc --> ExamRepo
ClassSvc --> ClassRepo
AssignSvc --> AssignRepo

' Repository -> Entity
UserRepo --> UserEntity
TestRepo --> TestEntity
QuesRepo --> QuesEntity
ExamRepo --> ExamEntity
ClassRepo --> ClassEntity
AssignRepo --> AssignEntity

' Entity -> Database
UserEntity --> DB
TestEntity --> DB
QuesEntity --> DB
ExamEntity --> DB
ClassEntity --> DB
AssignEntity --> DB

@enduml

@startuml Kiến trúc chi tiết Frontend
title Sơ đồ kiến trúc chi tiết - Frontend (React)

package "Pages Layer" {
    [LoginPage] as Login
    [DashboardPage] as Dashboard
    [TestBuilderPage] as TestBuilder
    [ExamPage] as Exam
    [ResultPage] as Result
    [WritingGradingPage] as Writing
    [ClassManagementPage] as Class
    [AssignmentPage] as Assignment
}

package "Components Layer" {
    [Navigation] as Nav
    [TestCard] as TestCard
    [QuestionItem] as Question
    [Timer] as Timer
    [AnswerInput] as Answer
    [GradingForm] as Grading
    [StudentList] as Students
}

package "Services Layer" {
    [authService] as AuthSvc
    [testService] as TestSvc
    [examService] as ExamSvc
    [writingService] as WriteSvc
    [classService] as ClassSvc
    [assignmentService] as AssignSvc
}

package "Hooks Layer" {
    [useAuth] as AuthHook
    [useTimer] as TimerHook
    [useAutoSave] as SaveHook
    [useExam] as ExamHook
}

package "Utils Layer" {
    [bandScoreCalculator] as BandCalc
    [dateFormatter] as DateFmt
    [validation] as Valid
}

cloud "Backend API\n(Spring Boot)" as API

' Pages -> Components
Login --> Nav
Dashboard --> Nav
Dashboard --> TestCard
TestBuilder --> Question
Exam --> Timer
Exam --> Question
Exam --> Answer
Result --> TestCard
Writing --> Grading
Class --> Students
Assignment --> TestCard

' Pages -> Hooks
Login --> AuthHook
Exam --> TimerHook
Exam --> SaveHook
Exam --> ExamHook

' Pages -> Services
Login --> AuthSvc
Dashboard --> TestSvc
TestBuilder --> TestSvc
Exam --> ExamSvc
Writing --> WriteSvc
Class --> ClassSvc
Assignment --> AssignSvc

' Hooks -> Services
AuthHook --> AuthSvc
ExamHook --> ExamSvc
SaveHook --> ExamSvc

' Services -> API
AuthSvc --> API
TestSvc --> API
ExamSvc --> API
WriteSvc --> API
ClassSvc --> API
AssignSvc --> API

' Utils
ExamSvc --> BandCalc
TestCard --> DateFmt
Login --> Valid

@enduml

@startuml Kiến trúc luồng dữ liệu
title Sơ đồ luồng dữ liệu - Làm bài thi

actor "Học viên" as Student
participant "React\nFrontend" as Frontend
participant "Spring Boot\nBackend" as Backend
database "MySQL" as DB
participant "Auto-save\nTimer" as Timer

== Bắt đầu làm bài ==
Student -> Frontend: Click "Bắt đầu làm bài"
Frontend -> Backend: POST /api/exam-attempt/start
Backend -> DB: INSERT exam_attempt
Backend -> DB: INSERT attempt_answer (cho mỗi câu)
DB --> Backend: attempt_id
Backend --> Frontend: {attemptId, questions}
Frontend -> Timer: Start auto-save (30s interval)
Frontend --> Student: Hiển thị câu hỏi đầu tiên

== Trong quá trình làm bài ==
loop Mỗi 30 giây
    Timer -> Frontend: Trigger auto-save
    Frontend -> Backend: PUT /api/exam-attempt/{id}/save-progress
    Backend -> DB: UPDATE attempt_answer
    DB --> Backend: Success
    Backend --> Frontend: 200 OK
end

Student -> Frontend: Chọn/Nhập câu trả lời
Frontend -> Frontend: Lưu vào state

== Nộp bài ==
Student -> Frontend: Click "Nộp bài"
Frontend -> Backend: POST /api/exam-attempt/{id}/submit
Backend -> DB: UPDATE attempt_answer (tất cả câu trả lời)
Backend -> Backend: Chấm điểm tự động
Backend -> Backend: Tính Band Score
Backend -> DB: UPDATE exam_attempt (status, score, band_score)
DB --> Backend: Success
Backend --> Frontend: {bandScore, totalScore, correctCount}
Frontend --> Student: Hiển thị kết quả

@enduml

@startuml Kiến trúc triển khai
title Sơ đồ triển khai hệ thống

node "Client Browser" {
    [Web Browser] as Browser
}

node "Web Server" {
    [Nginx\n(Port 80/443)] as Nginx
    [React App\n(Static Files)] as ReactApp
}

node "Application Server" {
    [Spring Boot\n(Port 8080)] as SpringBoot
    [JVM\n(Java 21)] as JVM
}

node "Database Server" {
    [MySQL\n(Port 3306)] as MySQL
}

cloud "External Services" {
    [Google Drive API] as Drive
    [SMTP Server] as SMTP
}

Browser --> Nginx : "HTTPS"
Nginx --> ReactApp : "Serve static files"
Browser --> SpringBoot : "REST API calls"
SpringBoot --> JVM : "Run on"
SpringBoot --> MySQL : "JDBC Connection"
SpringBoot --> Drive : "OAuth2"
SpringBoot --> SMTP : "Send emails"

note right of Nginx
  **Web Server:**
  - Serve React static files
  - SSL/TLS termination
  - Reverse proxy
  - Load balancing
end note

note right of SpringBoot
  **Application Server:**
  - REST API endpoints
  - Business logic
  - Authentication/Authorization
  - File upload handling
end note

note right of MySQL
  **Database Server:**
  - Store all data
  - Backup daily
  - Replication (optional)
end note

@enduml

@startuml Kiến trúc bảo mật
title Sơ đồ kiến trúc bảo mật

actor "User" as User
participant "React\nFrontend" as Frontend
participant "JWT Filter" as JwtFilter
participant "Spring Security" as Security
participant "Controllers" as Controller
participant "Services" as Service
database "MySQL" as DB

== Đăng nhập ==
User -> Frontend: Nhập username, password
Frontend -> Controller: POST /api/auth/login\n{username, password}
Controller -> Service: authenticate()
Service -> DB: SELECT user WHERE username=?
DB --> Service: User data
Service -> Service: BCrypt.checkPassword()
Service --> Controller: User object
Controller -> Security: Generate JWT token
Security --> Controller: JWT token
Controller --> Frontend: {token, user}
Frontend -> Frontend: localStorage.setItem('token')

== Gọi API với JWT ==
User -> Frontend: Thực hiện action
Frontend -> Frontend: Get token from localStorage
Frontend -> JwtFilter: API call với\nHeader: Authorization: Bearer {token}
JwtFilter -> JwtFilter: Extract token
JwtFilter -> Security: Validate token
Security -> Security: Check signature\nCheck expiration
alt Token hợp lệ
    Security --> JwtFilter: Valid
    JwtFilter -> Controller: Forward request
    Controller -> Service: Process request
    Service -> DB: Query data
    DB --> Service: Data
    Service --> Controller: Result
    Controller --> Frontend: Response
    Frontend --> User: Display result
else Token không hợp lệ
    Security --> JwtFilter: Invalid
    JwtFilter --> Frontend: 401 Unauthorized
    Frontend -> Frontend: Clear token
    Frontend --> User: Redirect to login
end

@enduml

@startuml Kiến trúc cơ sở dữ liệu
title Sơ đồ kiến trúc cơ sở dữ liệu - Các nhóm bảng chính

package "User Management" {
    entity "user" as user {
        * id : BIGINT
        --
        username : VARCHAR
        password : VARCHAR
        email : VARCHAR
        full_name : VARCHAR
    }
    
    entity "role" as role {
        * id : BIGINT
        --
        name : VARCHAR
    }
    
    entity "user_roles" as user_roles {
        * user_id : BIGINT
        * role_id : BIGINT
    }
}

package "Test Management" {
    entity "test" as test {
        * id : BIGINT
        --
        title : VARCHAR
        description : TEXT
        test_type : VARCHAR
        status : VARCHAR
    }
    
    entity "session" as session {
        * id : BIGINT
        --
        name : VARCHAR
        skill_type : VARCHAR
    }
    
    entity "part" as part {
        * id : BIGINT
        --
        session_id : BIGINT
        name : VARCHAR
    }
    
    entity "question_group" as qgroup {
        * id : BIGINT
        --
        part_id : BIGINT
        passage_content : TEXT
        audio_url : VARCHAR
    }
    
    entity "question" as question {
        * id : BIGINT
        --
        question_group_id : BIGINT
        question_type_id : BIGINT
        question_text : TEXT
    }
}

package "Exam Attempt" {
    entity "exam_attempt" as attempt {
        * id : BIGINT
        --
        user_id : BIGINT
        test_id : BIGINT
        status : VARCHAR
        band_score : DECIMAL
    }
    
    entity "attempt_answer" as answer {
        * id : BIGINT
        --
        exam_attempt_id : BIGINT
        question_id : BIGINT
        answer_text : TEXT
        is_correct : BOOLEAN
    }
    
    entity "student_writing_submission" as writing {
        * id : BIGINT
        --
        user_id : BIGINT
        question_group_id : BIGINT
        content : TEXT
        band_score : DECIMAL
    }
}

package "Class Management" {
    entity "class" as class {
        * id : BIGINT
        --
        code : VARCHAR
        name : VARCHAR
        start_date : DATE
    }
    
    entity "class_student" as class_student {
        * id : BIGINT
        --
        class_id : BIGINT
        user_id : BIGINT
    }
    
    entity "assignment" as assignment {
        * id : BIGINT
        --
        class_id : BIGINT
        test_id : BIGINT
        due_date : TIMESTAMP
    }
    
    entity "assignment_submission" as submission {
        * id : BIGINT
        --
        assignment_id : BIGINT
        user_id : BIGINT
        exam_attempt_id : BIGINT
    }
}

' Relationships
user ||--o{ user_roles
role ||--o{ user_roles

test ||--o{ attempt
user ||--o{ attempt
attempt ||--o{ answer
question ||--o{ answer

test ||--o{ session
session ||--o{ part
part ||--o{ qgroup
qgroup ||--o{ question

user ||--o{ writing
qgroup ||--o{ writing

class ||--o{ class_student
user ||--o{ class_student

class ||--o{ assignment
test ||--o{ assignment

assignment ||--o{ submission
user ||--o{ submission
attempt ||--o{ submission

@enduml

@startuml Kiến trúc mở rộng
title Sơ đồ kiến trúc mở rộng - Hướng phát triển

package "Current System" {
    [React Frontend] as Frontend
    [Spring Boot Backend] as Backend
    [MySQL Database] as MySQL
}

package "Future Enhancements" <<Future>> {
    [Mobile App\n(iOS/Android)] as Mobile
    [AI Grading Service\n(GPT-4 API)] as AI
    [Redis Cache] as Redis
    [Elasticsearch] as ES
    [Message Queue\n(RabbitMQ)] as MQ
    [CDN\n(CloudFlare)] as CDN
    [Payment Gateway\n(VNPAY/MoMo)] as Payment
}

package "Monitoring & Analytics" <<Future>> {
    [Prometheus] as Prometheus
    [Grafana] as Grafana
    [ELK Stack] as ELK
}

' Current connections
Frontend --> Backend
Backend --> MySQL

' Future connections
Mobile --> Backend : "REST API"
Backend --> AI : "Auto-grade Writing/Speaking"
Backend --> Redis : "Cache session & test data"
Backend --> ES : "Full-text search"
Backend --> MQ : "Async tasks"
Frontend --> CDN : "Static assets"
Mobile --> CDN : "Static assets"
Backend --> Payment : "Process payments"

Backend --> Prometheus : "Metrics"
Prometheus --> Grafana : "Visualize"
Backend --> ELK : "Logs"

note right of AI
  **AI Features:**
  - Auto-grade Writing
  - Auto-grade Speaking
  - Personalized feedback
  - Learning path recommendation
end note

note right of Redis
  **Caching:**
  - Session data
  - Test structure
  - User profiles
  - Reduce DB load
end note

note right of ES
  **Search:**
  - Full-text search tests
  - Search questions
  - Search students
  - Fast & scalable
end note

@enduml
